--- a/dashboard.html
+++ b/dashboard.html
@@ -7,23 +7,146 @@
     <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
-    <header class="header">
-        <h1>Bienvenue sur le tableau de bord des films</h1>
-        <button class="logout-btn" onclick="logout()">Déconnexion</button>
-    </header>
 
-    <main class="main-content">
-        <nav class="navbar">
-            <a href="fast_furious.html">Fast & Furious</a>
-            <a href="deadpool.html">Deadpool</a>
-            <a href="ready_player_one.html">Ready Player One</a>
-        </nav>
-    </main>
+    <!-- Bannière Adblock -->
+    <div id="adblock-banner">
+        <p>Pour une meilleure expérience sans publicités, utilisez un navigateur avec bloqueur de publicités comme 
+            <a href="https://brave.com" target="_blank">Brave</a> ou installez 
+            <a href="https://ublockorigin.com/" target="_blank">uBlock Origin</a>.
+        </p>
+        <button onclick="closeBanner()">X</button>
+    </div>
+
+    <div class="dashboard-container">
+        <!-- Entête -->
+        <header class="header">
+            <h1>Bienvenue sur le tableau de bord des films</h1>
+            <button class="logout-btn" onclick="logout()">Déconnexion</button>
+        </header>
+
+        <!-- Zone Admin visible seulement pour les admins -->
+        <div id="admin-section" class="admin-section" style="display: none;">
+            <h2>Section Administrateur</h2>
+            <button class="admin-btn" onclick="addMovie()">Ajouter un film</button>
+            <button class="admin-btn" onclick="removeMovie()">Supprimer un film</button>
+        </div>
+
+        <!-- Modale pour ajouter un film -->
+        <div id="addMovieModal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="closeModal()">&times;</span>
+                <h2>Ajouter un Film</h2>
+                <form id="addMovieForm">
+                    <label for="movieName">Nom du Film:</label>
+                    <input type="text" id="movieName" name="movieName" required><br><br>
+                    <label for="movieUrl">URL du Film:</label>
+                    <input type="url" id="movieUrl" name="movieUrl" required><br><br>
+                    <button type="submit">Ajouter</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Contenu Principal -->
+        <main class="main-content">
+            <!-- Catégorie Fast & Furious -->
+            <section class="category" id="fast-furious">
+                <h2>Fast & Furious <button class="toggle-btn" onclick="toggleCategory('fast-furious')">Afficher / Masquer</button></h2>
+                <div class="movies" id="fast-furious-movies">
+                    <div class="card">
+                        <h3>Fast & Furious 1</h3>
+                        <iframe src="https://filemoon.sx/e/dluwszk086er" scrolling="no" allowfullscreen></iframe>
+                    </div>
+                    <!-- Ajouter d'autres films ici... -->
+                </div>
+            </section>
+
+            <!-- Catégorie Deadpool -->
+            <section class="category" id="deadpool">
+                <h2>Deadpool <button class="toggle-btn" onclick="toggleCategory('deadpool')">Afficher / Masquer</button></h2>
+                <div class="movies" id="deadpool-movies">
+                    <div class="card">
+                        <h3>Deadpool 1</h3>
+                        <iframe src="https://filemoon.sx/e/niqfq9ldwoxt" scrolling="no" allowfullscreen></iframe>
+                    </div>
+                    <!-- Ajouter d'autres films ici... -->
+                </div>
+            </section>
+
+            <!-- Catégorie Ready Player One -->
+            <section class="category" id="ready-player-one">
+                <h2>Ready Player One <button class="toggle-btn" onclick="toggleCategory('ready-player-one')">Afficher / Masquer</button></h2>
+                <div class="movies" id="ready-player-one-movies">
+                    <div class="card">
+                        <h3>Ready Player One</h3>
+                        <iframe src="https://filemoon.sx/e/lri81845b99q" scrolling="no" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
 
     <script>
+        // Fonction pour masquer ou afficher une catégorie
+        function toggleCategory(categoryId) {
+            const category = document.getElementById(categoryId + '-movies');
+            category.style.display = category.style.display === 'none' ? 'block' : 'none';
+        }
+
+        // Fonction pour fermer la bannière
+        function closeBanner() {
+            const banner = document.getElementById('adblock-banner');
+            banner.style.display = 'none';
+        }
+
+        // Fonction de déconnexion
         function logout() {
             window.location.href = 'index.html';
         }
+
+        // Fonction pour vérifier si l'utilisateur est admin
+        function checkAdmin() {
+            // Simulation d'un contrôle d'accès (ici on suppose que l'utilisateur est admin)
+            const isAdmin = true; // Remplacer par un vrai contrôle (ex: vérification d'un cookie, token, ou API)
+
+            if (isAdmin) {
+                document.getElementById('admin-section').style.display = 'block'; // Afficher la section admin
+            }
+        }
+
+        // Fonction pour afficher la modale d'ajout de film
+        function addMovie() {
+            const modal = document.getElementById("addMovieModal");
+            modal.style.display = "block"; // Afficher la modale
+        }
+
+        // Fonction pour fermer la modale
+        function closeModal() {
+            const modal = document.getElementById("addMovieModal");
+            modal.style.display = "none"; // Fermer la modale
+        }
+
+        // Gérer l'ajout d'un film
+        document.getElementById('addMovieForm').addEventListener('submit', function(e) {
+            e.preventDefault(); // Empêcher l'envoi du formulaire
+
+            const movieName = document.getElementById('movieName').value;
+            const movieUrl = document.getElementById('movieUrl').value;
+
+            // Ajouter un film (logique à personnaliser)
+            const category = document.getElementById('fast-furious-movies'); // Exemple de catégorie, changer si nécessaire
+            const newCard = document.createElement('div');
+            newCard.classList.add('card');
+            newCard.innerHTML = `<h3>${movieName}</h3><iframe src="${movieUrl}" scrolling="no" allowfullscreen></iframe>`;
+
+            category.appendChild(newCard);
+
+            // Fermer la modale
+            closeModal();
+        });
+
+        // Appeler la fonction de vérification à l'ouverture de la page
+        checkAdmin();
     </script>
+
 </body>
 </html>
