--- a/dashboard.html
+++ b/dashboard.html
@@ -103,7 +103,7 @@
 
         // Fonction de déconnexion
         function logout() {
-            window.location.href = 'index.html';
+            window.location.href = 'deadpool.html';
         }
     </script>
 </body>
