--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
         <!-- Entête -->
         <header class="header">
             <h1>Bienvenue sur le tableau de bord des films</h1>
-            <button class="logout-btn" onclick="logout()">Déconnexion</button>
+            <button class="logout-btn" onclick="logout()">autre menu</button>
         </header>
 
         <!-- Contenu Principal -->
