--- a/fast_furious.html
+++ b/fast_furious.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fast & Furious</title>
+    <title>Films - Recherche</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header class="header">
-        <h1>Films Fast & Furious</h1>
+        <h1>Films</h1>
         <button class="logout-btn" onclick="logout()">Déconnexion</button>
     </header>
 
@@ -19,60 +20,86 @@
             <a href="ready_player_one.html">Ready Player One</a>
         </nav>
 
-        <div class="search-container">
-            <input
-                type="text"
-                id="search-bar"
-                placeholder="Rechercher un film..."
-                oninput="filterMovies()"
-            />
-        </div>
+        <section class="search-section">
+            <input type="text" id="search-bar" oninput="showSuggestions()" placeholder="Rechercher un film...">
+            <ul id="suggestions-list" style="display:none;"></ul>
+        </section>
 
         <section class="movies">
-            <div class="card">
+            <div class="card" data-title="Fast & Furious 1">
                 <h3>Fast & Furious 1</h3>
                 <iframe src="https://filemoon.sx/e/dluwszk086er" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card">
+            <div class="card" data-title="Fast & Furious 2">
                 <h3>Fast & Furious 2</h3>
                 <iframe src="https://filemoon.sx/e/pdxjuwy2wwd1" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card">
-                <h3>Fast & Furious 4</h3>
-                <iframe src="https://filemoon.sx/e/5wja6y3ff2u6" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+            <div class="card" data-title="Deadpool 1">
+                <h3>Deadpool 1</h3>
+                <iframe src="https://filemoon.sx/e/niqfq9ldwoxt" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card">
-                <h3>Fast & Furious 5</h3>
-                <iframe src="https://filemoon.sx/e/ckd4zeqxc0ks" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+            <div class="card" data-title="Deadpool 2">
+                <h3>Deadpool 2</h3>
+                <iframe src="https://filemoon.sx/e/k35iogdyle2h" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card">
-                <h3>Fast & Furious 6</h3>
-                <iframe src="https://filemoon.sx/e/j1ng3m4km0ec" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
-            </div>
-            <div class="card">
-                <h3>Fast & Furious 10</h3>
-                <iframe src="https://filemoon.sx/e/qsmsrk2k0zml" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
-            </div>
-            <div class="card">
-                <h3>Fast & Furious (Hobbs & Shaw)</h3>
-                <iframe src="https://filemoon.sx/e/ye3u08n1p1qm" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+            <div class="card" data-title="Ready Player One">
+                <h3>Ready Player One</h3>
+                <iframe src="https://filemoon.sx/e/lri81845b99q" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
         </section>
     </main>
 
     <script>
+        const films = [
+            "Fast & Furious 1",
+            "Fast & Furious 2",
+            "Deadpool 1",
+            "Deadpool 2",
+            "Ready Player One"
+        ];
+
+        // Fonction pour afficher les suggestions en temps réel
+        function showSuggestions() {
+            const searchInput = document.getElementById('search-bar').value.toLowerCase();
+            const suggestionsList = document.getElementById('suggestions-list');
+            const suggestions = films.filter(film => film.toLowerCase().includes(searchInput));
+            
+            suggestionsList.innerHTML = ''; // Vide la liste des suggestions précédentes
+
+            if (suggestions.length > 0 && searchInput) {
+                suggestions.forEach(film => {
+                    const suggestionItem = document.createElement('li');
+                    suggestionItem.textContent = film;
+                    suggestionItem.onclick = function() {
+                        document.getElementById('search-bar').value = film;
+                        filterMovies(film);
+                    };
+                    suggestionsList.appendChild(suggestionItem);
+                });
+                suggestionsList.style.display = 'block';
+            } else {
+                suggestionsList.style.display = 'none';
+            }
+        }
+
+        // Fonction pour filtrer les films en fonction de la recherche
+        function filterMovies(query) {
+            const films = document.querySelectorAll('.card');
+            films.forEach(film => {
+                const title = film.getAttribute('data-title').toLowerCase();
+                if (title.includes(query.toLowerCase()) || !query) {
+                    film.style.display = 'block';
+                } else {
+                    film.style.display = 'none';
+                }
+            });
+        }
+
+        // Fonction de déconnexion
         function logout() {
             window.location.href = 'index.html';
         }
-
-        function filterMovies() {
-            const query = document.getElementById('search-bar').value.toLowerCase();
-            const movies = document.querySelectorAll('.card');
-            movies.forEach((movie) => {
-                const title = movie.querySelector('h3').innerText.toLowerCase();
-                movie.style.display = title.includes(query) ? 'block' : 'none';
-            });
-        }
     </script>
+
 </body>
-    </html>
+</html>
