--- a/fast_furious.html
+++ b/fast_furious.html
@@ -26,6 +26,7 @@
         </section>
 
         <section class="movies">
+            <!-- Only films with working video links -->
             <div class="card" data-title="Fast & Furious 1">
                 <h3>Fast & Furious 1</h3>
                 <iframe src="https://filemoon.sx/e/dluwszk086er" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
@@ -34,17 +35,37 @@
                 <h3>Fast & Furious 2</h3>
                 <iframe src="https://filemoon.sx/e/pdxjuwy2wwd1" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card" data-title="Deadpool 1">
-                <h3>Deadpool 1</h3>
-                <iframe src="https://filemoon.sx/e/niqfq9ldwoxt" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+            <div class="card" data-title="Fast & Furious 4">
+                <h3>Fast & Furious 4</h3>
+                <iframe src="https://filemoon.sx/e/5wja6y3ff2u6" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card" data-title="Deadpool 2">
-                <h3>Deadpool 2</h3>
+            <div class="card" data-title="Fast & Furious 5">
+                <h3>Fast & Furious 5</h3>
+                <iframe src="https://filemoon.sx/e/ckd4zeqxc0ks" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+            </div>
+            <div class="card" data-title="Fast & Furious 6">
+                <h3>Fast & Furious 6</h3>
+                <iframe src="https://filemoon.sx/e/j1ng3m4km0ec" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+            </div>
+            <div class="card" data-title="Fast & Furious 7">
+                <h3>Fast & Furious 7</h3>
+                <iframe src="https://filemoon.sx/e/ye3u08n1p1qm" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+            </div>
+            <div class="card" data-title="Fast & Furious 8">
+                <h3>Fast & Furious 8</h3>
                 <iframe src="https://filemoon.sx/e/k35iogdyle2h" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card" data-title="Ready Player One">
-                <h3>Ready Player One</h3>
+            <div class="card" data-title="Fast & Furious 9">
+                <h3>Fast & Furious 9</h3>
                 <iframe src="https://filemoon.sx/e/lri81845b99q" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+            </div>
+            <div class="card" data-title="Fast & Furious 10">
+                <h3>Fast & Furious 10</h3>
+                <iframe src="https://filemoon.sx/e/pdxjuwy2wwd1" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+            </div>
+            <div class="card" data-title="Fast & Furious Presents: Hobbs & Shaw">
+                <h3>Fast & Furious Presents: Hobbs & Shaw</h3>
+                <iframe src="https://filemoon.sx/e/ye3u08n1p1qm" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
         </section>
     </main>
@@ -53,9 +74,14 @@
         const films = [
             "Fast & Furious 1",
             "Fast & Furious 2",
-            "Deadpool 1",
-            "Deadpool 2",
-            "Ready Player One"
+            "Fast & Furious 4",
+            "Fast & Furious 5",
+            "Fast & Furious 6",
+            "Fast & Furious 7",
+            "Fast & Furious 8",
+            "Fast & Furious 9",
+            "Fast & Furious 10",
+            "Fast & Furious Presents: Hobbs & Shaw"
         ];
 
         // Fonction pour afficher les suggestions en temps réel
