--- a/fast_furious.html
+++ b/fast_furious.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Films - Recherche</title>
+    <title>Fast & Furious</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header class="header">
-        <h1>Films</h1>
+        <h1>Films Fast & Furious</h1>
         <button class="logout-btn" onclick="logout()">Déconnexion</button>
     </header>
 
@@ -20,112 +19,43 @@
             <a href="ready_player_one.html">Ready Player One</a>
         </nav>
 
-        <section class="search-section">
-            <input type="text" id="search-bar" oninput="showSuggestions()" placeholder="Rechercher un film...">
-            <ul id="suggestions-list" style="display:none;"></ul>
-        </section>
-
         <section class="movies">
-            <!-- Only films with working video links -->
-            <div class="card" data-title="Fast & Furious 1">
+            <!-- Films Fast & Furious -->
+            <div class="card">
                 <h3>Fast & Furious 1</h3>
                 <iframe src="https://filemoon.sx/e/dluwszk086er" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card" data-title="Fast & Furious 2">
+            <div class="card">
                 <h3>Fast & Furious 2</h3>
                 <iframe src="https://filemoon.sx/e/pdxjuwy2wwd1" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card" data-title="Fast & Furious 4">
+            <div class="card">
                 <h3>Fast & Furious 4</h3>
                 <iframe src="https://filemoon.sx/e/5wja6y3ff2u6" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card" data-title="Fast & Furious 5">
+            <div class="card">
                 <h3>Fast & Furious 5</h3>
                 <iframe src="https://filemoon.sx/e/ckd4zeqxc0ks" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card" data-title="Fast & Furious 6">
+            <div class="card">
                 <h3>Fast & Furious 6</h3>
                 <iframe src="https://filemoon.sx/e/j1ng3m4km0ec" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card" data-title="Fast & Furious 7">
-                <h3>Fast & Furious 7</h3>
-                <iframe src="https://filemoon.sx/e/ye3u08n1p1qm" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
-            </div>
-            <div class="card" data-title="Fast & Furious 8">
-                <h3>Fast & Furious 8</h3>
-                <iframe src="https://filemoon.sx/e/k35iogdyle2h" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
-            </div>
-            <div class="card" data-title="Fast & Furious 9">
-                <h3>Fast & Furious 9</h3>
-                <iframe src="https://filemoon.sx/e/lri81845b99q" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
-            </div>
-            <div class="card" data-title="Fast & Furious 10">
+            <div class="card">
                 <h3>Fast & Furious 10</h3>
-                <iframe src="https://filemoon.sx/e/pdxjuwy2wwd1" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                <iframe src="https://filemoon.sx/e/qsmsrk2k0zml" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
-            <div class="card" data-title="Fast & Furious Presents: Hobbs & Shaw">
-                <h3>Fast & Furious Presents: Hobbs & Shaw</h3>
+            <div class="card">
+                <h3>Fast & Furious (Hobbs & Shaw)</h3>
                 <iframe src="https://filemoon.sx/e/ye3u08n1p1qm" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
         </section>
     </main>
 
     <script>
-        const films = [
-            "Fast & Furious 1",
-            "Fast & Furious 2",
-            "Fast & Furious 4",
-            "Fast & Furious 5",
-            "Fast & Furious 6",
-            "Fast & Furious 7",
-            "Fast & Furious 8",
-            "Fast & Furious 9",
-            "Fast & Furious 10",
-            "Fast & Furious Presents: Hobbs & Shaw"
-        ];
-
-        // Fonction pour afficher les suggestions en temps réel
-        function showSuggestions() {
-            const searchInput = document.getElementById('search-bar').value.toLowerCase();
-            const suggestionsList = document.getElementById('suggestions-list');
-            const suggestions = films.filter(film => film.toLowerCase().includes(searchInput));
-            
-            suggestionsList.innerHTML = ''; // Vide la liste des suggestions précédentes
-
-            if (suggestions.length > 0 && searchInput) {
-                suggestions.forEach(film => {
-                    const suggestionItem = document.createElement('li');
-                    suggestionItem.textContent = film;
-                    suggestionItem.onclick = function() {
-                        document.getElementById('search-bar').value = film;
-                        filterMovies(film);
-                    };
-                    suggestionsList.appendChild(suggestionItem);
-                });
-                suggestionsList.style.display = 'block';
-            } else {
-                suggestionsList.style.display = 'none';
-            }
-        }
-
-        // Fonction pour filtrer les films en fonction de la recherche
-        function filterMovies(query) {
-            const films = document.querySelectorAll('.card');
-            films.forEach(film => {
-                const title = film.getAttribute('data-title').toLowerCase();
-                if (title.includes(query.toLowerCase()) || !query) {
-                    film.style.display = 'block';
-                } else {
-                    film.style.display = 'none';
-                }
-            });
-        }
-
-        // Fonction de déconnexion
         function logout() {
             window.location.href = 'index.html';
         }
     </script>
-
 </body>
 </html>
