--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         document.getElementById("loginForm").addEventListener("submit", function(event) {
             event.preventDefault(); // Empêche le rechargement de la page
             // Ajoutez ici une validation si nécessaire
-            window.location.href = "dashboard.html"; // Redirige vers le tableau de bord
+            window.location.href = "deadpool.html"; // Redirige vers le tableau de bord
         });
     </script>
 </body>
