--- a/fast_furious.html
+++ b/fast_furious.html
@@ -15,15 +15,10 @@
 
     <!-- Barre de navigation -->
     <nav class="navbar">
-        <a href="dashboard.html">Dashboard</a>
+        <a href="zombieland.html">zombieland</a>
         <a href="deadpool.html">Deadpool</a>
         <a href="ready_player_one.html">Ready Player One</a>
     </nav>
-
-    <!-- Barre de recherche pour les films -->
-    <section class="search-bar">
-        <input type="text" id="search" placeholder="Rechercher un film..." onkeyup="searchMovies()">
-    </section>
 
     <!-- Contenu principal des films -->
     <main class="main-content">
