--- a/ready_player_one.html
+++ b/ready_player_one.html
@@ -14,7 +14,7 @@
 
     <main class="main-content">
         <nav class="navbar">
-            <a href="dashboard.html">Dashboard</a>
+            <a href="zombieland.html">zombieland</a>
             <a href="fast_furious.html">Fast & Furious</a>
             <a href="deadpool.html">Deadpool</a>
         </nav>
