--- a/deadpool.html
+++ b/deadpool.html
@@ -14,7 +14,7 @@
 
     <main class="main-content">
         <nav class="navbar">
-            <a href="dashboard.html">Dashboard</a>
+            <a href="zombieland.html">Zombieland</a>
             <a href="fast_furious.html">Fast & Furious</a>
             <a href="ready_player_one.html">Ready Player One</a>
         </nav>
