--- a/fast_furious.html
+++ b/fast_furious.html
@@ -15,7 +15,7 @@
 
     <!-- Barre de navigation -->
     <nav class="navbar">
-        <a href="zombieland.html">zombieland</a>
+        <a href="zombieland.html">Zombieland</a>
         <a href="deadpool.html">Deadpool</a>
         <a href="ready_player_one.html">Ready Player One</a>
     </nav>
