--- a/zombieland.html
+++ b/zombieland.html
@@ -14,7 +14,7 @@
 
     <main class="main-content">
         <nav class="navbar">
-            <a href="deadpool.html">deadpool</a>
+            <a href="deadpool.html">Deadpool</a>
             <a href="fast_furious.html">Fast & Furious</a>
             <a href="ready_player_one.html">Ready Player One</a>
         </nav>
