--- a/ready_player_one.html
+++ b/ready_player_one.html
@@ -1,36 +1,168 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ready Player One</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header class="header">
-        <h1>Films Ready Player One</h1>
-        <button class="logout-btn" onclick="logout()">Déconnexion</button>
-    </header>
+/* === Global Reset === */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    <main class="main-content">
-        <nav class="navbar">
-            <a href="zombieland.html">Zombieland</a>
-            <a href="fast_furious.html">Fast & Furious</a>
-            <a href="deadpool.html">Deadpool</a>
-        </nav>
+html, body {
+    width: 100%;
+    height: 100%;
+    font-family: 'Arial', sans-serif;
+    background: linear-gradient(10deg, #611010, #011102);
+    color: #f5f5f5;
+    overflow-x: hidden;
+}
 
-        <section class="movies">
-            <div class="card">
-                <h3>Ready Player One</h3>
-                <iframe src="https://filemoon.sx/e/lri81845b99q" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
-            </div>
-        </section>
-    </main>
+/* === Container Principal === */
+.container {
+    width: 90%;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    color: #333;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 
-    <script>
-        function logout() {
-            window.location.href = 'index.html';
-        }
-    </script>
-</body>
-</html>
+/* === Titres et Textes === */
+h1 {
+    font-size: 2em;
+    color: #4caf50;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+p {
+    color: #555;
+    margin-bottom: 20px;
+    line-height: 1.6;
+}
+
+/* === Formulaire === */
+.input-group {
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #333;
+}
+
+input[type="email"], 
+input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+input:focus {
+    border-color: #4caf50;
+    outline: none;
+    box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
+}
+
+/* === Boutons === */
+.btn {
+    width: 100%;
+    padding: 10px;
+    background-color: #4caf50;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 1em;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.btn:hover {
+    background-color: #45a049;
+    transform: scale(1.02);
+}
+
+.btn:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+/* === Liens === */
+.register-link {
+    margin-top: 15px;
+    text-align: center;
+}
+
+.register-link a {
+    color: #4caf50;
+    text-decoration: none;
+    transition: color 0.2s ease;
+}
+
+.register-link a:hover {
+    text-decoration: underline;
+    color: #45a049;
+}
+
+/* === Gestion des Pop-ups === */
+/* Cache les pop-ups courants */
+.pop-up, 
+.overlay, 
+.ad-container, 
+.popup-ads {
+    display: none !important;
+    visibility: hidden !important;
+    opacity: 0 !important;
+    height: 0 !important;
+    width: 0 !important;
+}
+
+/* Empêche les clics ou redirections depuis les iframes */
+iframe {
+    pointer-events: none; /* Désactive les interactions avec les iframes */
+}
+
+/* Empêche les overlays de masquer la page */
+.overlay, 
+.modal-backdrop, 
+.fullscreen-popup {
+    pointer-events: none !important; /* Désactive les clics sur les overlays */
+    background: none !important; /* Supprime les fonds noirs ou transparents */
+}
+
+/* Empêche les pop-ups ouvertes par des liens */
+a[target="_blank"], 
+a[target="_top"] {
+    pointer-events: none;
+    color: inherit !important;
+    text-decoration: none !important;
+}
+
+/* === Défilement Forcé === */
+body.no-scroll {
+    overflow: visible !important; /* Autorise le défilement même si bloqué */
+}
+
+/* === Animations de Pop-ups === */
+@keyframes annoying-popup {
+    from { opacity: 1; }
+    to { opacity: 0; }
+}
+
+.popup-animation {
+    animation: annoying-popup 0.1s linear forwards;
+}
+
+/* === Publicités === */
+/* Masque les publicités communes */
+.ad-banner, 
+.ad-box, 
+.advertisement, 
+.adsbygoogle {
+    display: none !important;
+    visibility: hidden !important;
+}
